--- a/src/main/resources/components/main/css/style.css
+++ b/src/main/resources/components/main/css/style.css
@@ -1,3 +1,23 @@
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
+.mobile_view {
+  display: flex;
+  flex-direction: column;
+  width: 353px;
+  height: 100%;
+  max-height: 852px;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
 
+.logo {
+    width: 80px;
+    height: 80%;
+}
 /*# sourceMappingURL=style.css.map */
