--- a/src/main/resources/components/main/index.html
+++ b/src/main/resources/components/main/index.html
@@ -5,13 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./script.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="mobile_view">
-            <img class="logo" src="../../assets/img/Logo.svg">
-        </div>
+            <img class="logo" src="../../assets/img/Logo.svg" alt="Logo">
+            <div class="news">
+                <div class="news-items">
+                    <div class="news-item">
+                        <img class="newsImg" src="../../assets/img/ham.svg" alt="">
+                        <div>
+                            <p class="newsText">의성마늘햄</p>
+                            <p class="newsText">해외랑 첫 계약 맺어</p>
+                        </div>
+                    </div>
+                    <div class="news-item">
+                        <img class="newsImg" src="../../assets/img/ham.svg" alt="">
+                        <div>
+                            <p class="newsText">의성마늘햄</p>
+                            <p class="newsText">신제품 출시 예정</p>
+                        </div>
+                    </div>
+                    <div class="news-item">
+                        <img class="newsImg" src="../../assets/img/ham.svg" alt="">
+                        <div>
+                            <p class="newsText">의성마늘햄</p>
+                            <p class="newsText">올해의 식품상 수상</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+    <script src="./js/script.js"></script>
 </body>
 </html>
