--- a/src/main/resources/components/main/css/style.css
+++ b/src/main/resources/components/main/css/style.css
@@ -1,8 +1,11 @@
+
+
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  overflow: hidden;
 }
 
 .mobile_view {
@@ -17,7 +20,41 @@
 }
 
 .logo {
-    width: 80px;
-    height: 80%;
+  width: 55px;
+  height: auto;
 }
-/*# sourceMappingURL=style.css.map */
+
+.news {
+  position: relative;
+  width: 100%;
+  height: 100px; /* 높이 조정 */
+  background-color: #f3f3f3;
+  display: flex;
+  align-items: center; /* 수직 중앙 정렬 */
+  justify-content: center; /* 수평 중앙 정렬 */
+  border-radius: 20px;
+}
+
+.news-items {
+  display: flex;
+  transition: transform 0.5s ease;
+}
+
+.news-item {
+  display: flex;
+  align-items: center; /* 수직 중앙 정렬 */
+  justify-content: center; /* 수평 중앙 정렬 */
+  flex: 0 0 auto; /* 아이템의 너비를 내용에 맞게 조정 */
+  width: 100%; /* 각 아이템이 컨테이너를 가득 채우도록 */
+}
+
+.newsImg {
+  width: 100px; /* 이미지 크기 조정 */
+  height: 100px;
+}
+
+.newsText {
+  margin-left: 10px; /* 텍스트와 이미지 간격 조정 */
+  text-align: left;
+  font-family: 'pretendard';
+}
