--- a/src/main/resources/assets/style/global.css
+++ b/src/main/resources/assets/style/global.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "ㄱ";
+    font-family: "Pretendard-Regular";
     src: local("Pretendard-Regular"), url(../fonts/Pretendard-Regular.woff2) format('woff2');
     font-weight: 400
 }
