--- a/src/main/resources/components/main/index.html
+++ b/src/main/resources/components/main/index.html
@@ -36,6 +36,23 @@
                     </div>
                 </div>
             </div>
+            <div class="minbak">
+                <p class="gps">의성군</p>
+                <div class="minbakBox">
+                    <img class="minbakPhoto" src="../../assets/img/minbag.svg" alt="minbag">
+                    <div>
+                        <p class="minbakTitle">인테리어 예쁜 집 있습니다.</p>
+                        <div class="minbakSubTitle">
+                            <div>
+                                <span><img src="../../assets/img/human.svg" alt=""></span>
+                                <span>JegalNyang</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="minbakBox"></div>
+                <div class="minbakBox"></div>
+            </div>
         </div>
     </div>
     <script src="./js/script.js"></script>
