--- a/src/main/resources/components/main/css/style.css
+++ b/src/main/resources/components/main/css/style.css
@@ -1,5 +1,3 @@
-
-
 .container {
   display: flex;
   justify-content: center;
@@ -25,6 +23,7 @@
 }
 
 .news {
+  margin-top: 20px;
   position: relative;
   width: 100%;
   height: 100px; /* 높이 조정 */
@@ -56,5 +55,36 @@
 .newsText {
   margin-left: 10px; /* 텍스트와 이미지 간격 조정 */
   text-align: left;
-  font-family: 'pretendard';
+  font-family: "Pretendard-Semibold";
+  font-size: 15px;
+}
+
+.minbak {
+  width: 353px;
+  height: 60%;
+}
+.gps {
+  font-family: "Pretendard-Semibold";
+  text-align: left;
+  margin-top: 20px;
+}
+.minbakBox {
+  display: flex;
+  margin-top: 10px;
+  width: 100%;
+  height: 100px;
+  box-shadow: 4px 4px 10px -1px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+}
+.minbakBox .minbakPhoto {
+  width: 60px;
+  height: 60px;
+}
+.minbakTitle {
+  font-family: "Pretendard-Semibold";
+  font-size: 15px;
+}
+.minbakSubTitle {
+  font-family: "Pretendard-Semibold";
+  font-size: 10px;
 }
