--- a/src/main/resources/components/main/index.html
+++ b/src/main/resources/components/main/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="./script.js"></script>
 </head>
+
 <body>
     <div class="container">
         <div class="mobile_view">
@@ -38,23 +40,67 @@
             </div>
             <div class="minbak">
                 <p class="gps">의성군</p>
-                <div class="minbakBox">
-                    <img class="minbakPhoto" src="../../assets/img/minbag.svg" alt="minbag">
-                    <div>
-                        <p class="minbakTitle">인테리어 예쁜 집 있습니다.</p>
-                        <div class="minbakSubTitle">
-                            <div>
+                <a href="../minbag/application/index.html">
+                    <div class="minbakBox">
+                        <img class="minbakPhoto" src="../../assets/img/minbag.svg" alt="minbag">
+                        <div class="minbakSection">
+                            <p class="minbakTitle">인테리어 예쁜 집 있습니다.</p>
+                            <div class="minbak">
                                 <span><img src="../../assets/img/human.svg" alt=""></span>
-                                <span>JegalNyang</span>
+                                <span class="minbakSubTitle">JegalNyang</span>
+                            </div>
+                            <div>
+                                <span><img src="../../assets/img/calender.svg" alt=""></span>
+                                <span class="minbakSubTitle">8/25 ~ 9/17</span>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="minbakBox"></div>
-                <div class="minbakBox"></div>
+                </a>
+                <a href="../minbag/application/index.html">
+                    <div class="minbakBox">
+                        <img class="minbakPhoto" src="../../assets/img/minbag.svg" alt="minbag">
+                        <div class="minbakSection">
+                            <p class="minbakTitle">인테리어 예쁜 집 있습니다.</p>
+                            <div class="minbak">
+                                <span><img src="../../assets/img/human.svg" alt=""></span>
+                                <span class="minbakSubTitle">JegalNyang</span>
+                            </div>
+                            <div>
+                                <span><img src="../../assets/img/calender.svg" alt=""></span>
+                                <span class="minbakSubTitle">8/25 ~ 9/17</span>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="../minbag/application/index.html">
+
+                    <div class="minbakBox">
+                        <img class="minbakPhoto" src="../../assets/img/minbag.svg" alt="minbag">
+                        <div class="minbakSection">
+                            <p class="minbakTitle">인테리어 예쁜 집 있습니다.</p>
+                            <div class="minbak">
+                                <span><img src="../../assets/img/human.svg" alt=""></span>
+                                <span class="minbakSubTitle">JegalNyang</span>
+                            </div>
+                            <div>
+                                <span><img src="../../assets/img/calender.svg" alt=""></span>
+                                <span class="minbakSubTitle">8/25 ~ 9/17</span>
+                            </div>
+                        </div>
+                    </div>
+                </a>
             </div>
+            <footer>
+                <span></span>
+                <span><a href="./"><img src="../../assets/img/menu(active).svg" alt=""></a></span>
+                <span><a href="../../minbag/application/index.html"><img src="../../assets/img/create.svg"
+                            alt=""></a></span>
+                <span><a href="../../myPage/index.html"><img src="../../assets/img/myPage.svg" alt=""></a></span>
+                <span></span>
+            </footer>
         </div>
     </div>
     <script src="./js/script.js"></script>
 </body>
+
 </html>
