--- a/src/main/resources/components/auth/signin/index.html
+++ b/src/main/resources/components/auth/signin/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="./css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
-
+<div class="mobile-login-container">
+    <div class="header">
+        <button class="back-button">&#60;</button>
+        <h1 class=" ">로그인</h1>
+    </div>
+    <div class="input-group">
+        <label>아이디</label>
+        <input type="text" placeholder="사용자가 만든 이름을 입력해주세요">
+    </div>
+    <div class="input-group">
+        <label>비밀번호</label>
+        <input type="password" placeholder="비밀번호를 입력해주세요">
+    </div>
+    <button class="login-button">로그인하기</button>
+</div>
 </body>
 </html>
