--- a/src/main/resources/components/auth/signup/index.html
+++ b/src/main/resources/components/auth/signup/index.html
@@ -2,11 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+<div class="mobile-login-container">
+    <div class="header">
+        <button class="back-button">&#60;</button>
+        <h1 class="">정보를 입력하세요</h1> 
+    </div>
+    <div class="input-group">
+        <input type="text" placeholder="나만의 이름을 입력해주세요!">
+    </div>
+    <div class="input-group">
+        <input type="text" placeholder="전화번호를 입력해주세요">
+    </div>
+    <div class="input-group">
+        <input type="password" placeholder="비밀번호를 입력해주세요">
+    </div>
+    <div class="input-group">
+        <input type="password" placeholder="비밀번호를 다시 한번 입력해주세요">
+    </div>
+    <button class="login-button">다음</button>
+</div>
 </body>
 </html>
