--- a/src/main/resources/components/main/css/style.css
+++ b/src/main/resources/components/main/css/style.css
@@ -1,3 +1,5 @@
+@import url(../../../assets/style/global.css);
+
 .container {
   display: flex;
   justify-content: center;
@@ -13,7 +15,7 @@
   height: 100%;
   max-height: 852px;
   text-align: center;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
 }
 
@@ -25,6 +27,7 @@
 .news {
   margin-top: 20px;
   position: relative;
+  overflow: hidden;
   width: 100%;
   height: 100px; /* 높이 조정 */
   background-color: #f3f3f3;
@@ -70,9 +73,13 @@
 }
 .minbakBox {
   display: flex;
+  align-items: center; /* 수직 중앙 정렬 */
+  justify-content: flex-start; /* 수평 왼쪽 정렬 */
+  text-align: left;
   margin-top: 10px;
   width: 100%;
   height: 100px;
+  padding: 5px 20px;
   box-shadow: 4px 4px 10px -1px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
 }
@@ -83,8 +90,15 @@
 .minbakTitle {
   font-family: "Pretendard-Semibold";
   font-size: 15px;
+  color: black;
 }
 .minbakSubTitle {
   font-family: "Pretendard-Semibold";
   font-size: 10px;
+}
+
+.minbakSection {
+  align-items: center; /* 세로 중앙 정렬 */
+  margin-left: 20px;
+  color: #5A5A5A;
 }
