--- a/src/main/resources/components/start/index.html
+++ b/src/main/resources/components/start/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>migbag</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <div class="app-container">
+        <div class="logo">
+            <svg viewBox="0 0 100 100">
+                <path d="M10,50 L50,10 L90,50 L50,90 Z M30,50 L50,30 L70,50 L50,70 Z" />
+            </svg>
+        </div>
+        <div class="app-title">
+            <p class="main-title">일상속에서의 힐링</p>
+            <p class="sub-title">미그박</p>
+        </div>
+        <button class="login-button">로그인</button>
+        <p class="signup-link">
+            계정이 없으신가요? <a href="#">계정 생성하기</a>
+        </p>
+    </div>
 </body>
 </html>
