--- a/src/main/resources/components/main/index.html
+++ b/src/main/resources/components/main/index.html
@@ -73,7 +73,22 @@
                     </div>
                 </a>
                 <a href="../minbag/application/index.html">
-
+                    <div class="minbakBox">
+                        <img class="minbakPhoto" src="../../assets/img/minbag.svg" alt="minbag">
+                        <div class="minbakSection">
+                            <p class="minbakTitle">인테리어 예쁜 집 있습니다.</p>
+                            <div class="minbak">
+                                <span><img src="../../assets/img/human.svg" alt=""></span>
+                                <span class="minbakSubTitle">JegalNyang</span>
+                            </div>
+                            <div>
+                                <span><img src="../../assets/img/calender.svg" alt=""></span>
+                                <span class="minbakSubTitle">8/25 ~ 9/17</span>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="../minbag/application/index.html">
                     <div class="minbakBox">
                         <img class="minbakPhoto" src="../../assets/img/minbag.svg" alt="minbag">
                         <div class="minbakSection">
