--- a/src/main/resources/components/minbag/application/css/style.css
+++ b/src/main/resources/components/minbag/application/css/style.css
@@ -1,3 +1,47 @@
+html, body {
+    height: 100%;
+    margin: 0;
+}
 
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    overflow: hidden;
+}
 
-/*# sourceMappingURL=style.css.map */
+.mobile_view {
+    display: flex;
+    flex-direction: column;
+    width: 353px;
+    height: 100%;
+    max-height: 852px;
+    text-align: center;
+    align-items: center;
+}
+
+.slide {
+    display: flex;
+    transition: transform 0.5s ease;
+    width: 100%;
+    height: 300px;
+}
+
+.slide img {
+    width: 100%;
+    background-size: cover;
+}
+
+.controls {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+}
+
+button {
+    cursor: pointer;
+}
