--- a/src/main/resources/components/start/index.html
+++ b/src/main/resources/components/start/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
 <body>
     <div class="app-container">
         <div class="logo">
-            <svg viewBox="0 0 100 100">
-                <path d="M10,50 L50,10 L90,50 L50,90 Z M30,50 L50,30 L70,50 L50,70 Z" />
-            </svg>
+            <img src="/src/main/resources/assets/img/Logo.svg" alt="미그박 로고" class="logo">
         </div>
         <div class="app-title">
             <p class="main-title">일상속에서의 힐링</p>
