--- a/src/main/resources/components/minbag/application/index.html
+++ b/src/main/resources/components/minbag/application/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,21 +8,64 @@
     <link rel="stylesheet" href="./css/style.css">
     <script src="./script.js"></script>
 </head>
+
 <body>
     <div class="container">
         <div class="mobile_view">
             <a href="../../main/index.html"><img src="../../../assets/img/arrow.svg" alt="arrow"></a>
-            <div class="slide">
-                <img src="../../../assets/img/m1.png" alt="minpak">
-                <img src="../../../assets/img/m2.png" alt="minpak">
-                <img src="../../../assets/img/m3.png" alt="minpak">
+            <div class="slide-container">
+                <div class="slide">
+                    <img src="../../../assets/img/m1.png" alt="minpak">
+                    <img src="../../../assets/img/m2.png" alt="minpak">
+                    <img src="../../../assets/img/m3.png" alt="minpak">
+                </div>
+                <div class="controls">
+                    <button class="slideButton" id="prev"><img src="../../../assets/img/left_arrow.svg" alt=""></button>
+                    <button class="slideButton" id="next"><img src="../../../assets/img/right_arrow.svg" alt=""></button>
+                </div>
             </div>
-            <div class="controls">
-                <button id="prev"><img src="../../../assets/img/left_arrow.svg" alt=""></button>
-                <button id="next"><img src="../../../assets/img/right_arrow.svg" alt=""></button>
+            <div class="cartegory">
+                <span>고양이 키워요</span>
+                <span>쾌적해요</span>
             </div>
+            <div class="Registrar">
+                <p class="minBakTitle">인테리어 이쁜 집 있습니다.</p>
+                <p class="RegistrarId">@JeNyang</p>
+            </div>
+            <div class="Information">
+                <div class="map">
+                    <span><img style="width: 20px; height:20px" src="../../../assets/img/map.svg" alt=""></span>
+                    <span>경북 의성군 빙계 얼음골 야영장 18번</span>
+                </div>
+                <div style="margin-top: 10px;" class="date_money">
+                    <div>
+                        <div><span><img style="width:20px; height:20px;" src="../../../assets/img/calender.svg"
+                                    alt=""></span></div>
+                        <div><span style="margin-left: 5px;">8/25 ~ 9/13</span></div>
+                    </div>
+                    <span style="color: #676767;">|</span>
+                    <div>
+                        <div><span><img style="width:20px; height:20px;" src="../../../assets/img/money.svg"
+                                    alt=""></span></div>
+                        <div><span style="margin-left: 5px;">120,000 원</span></div>
+                    </div>
+                </div>
+                <div style="margin-top: 10px;" class="tel">
+                    <span><img src="../../../assets/img/call.svg" alt=""></span>
+                    <span>010-1234-5678</span>
+                </div>
+            </div>
+            <span style="margin-top: 10px; border-bottom: 0.5px solid #676767; width:100%;"></span>
+            <div>
+                <p>쓰리 룸입니다. 화장실 2개 있어요.</p>
+                <p>인테리어 해서 내부 깔끔합니다.</p>
+                <p>귀여운 고양이 살아요! 알러지 없는 분만 오세요!!</p>
+                <p>와이파이도 된답니당~~</p>
+            </div>
+            <span style="margin-top: 10px; border-bottom: 0.5px solid #676767; width:100%;"></span>
+            <button style="margin-top: 30px" class="RestrationButton">민박 신청하기</button>
         </div>
     </div>
-    
 </body>
+
 </html>
