--- a/src/main/resources/components/main/index.html
+++ b/src/main/resources/components/main/index.html
@@ -50,7 +50,7 @@
                                 <span class="minbakSubTitle">JegalNyang</span>
                             </div>
                             <div>
-                                <span><img src="../../assets/img/calender.svg" alt=""></span>
+                                <span><img src="../../assets/img/date.svg" alt=""></span>
                                 <span class="minbakSubTitle">8/25 ~ 9/17</span>
                             </div>
                         </div>
@@ -66,7 +66,7 @@
                                 <span class="minbakSubTitle">JegalNyang</span>
                             </div>
                             <div>
-                                <span><img src="../../assets/img/calender.svg" alt=""></span>
+                                <span><img src="../../assets/img/date.svg" alt=""></span>
                                 <span class="minbakSubTitle">8/25 ~ 9/17</span>
                             </div>
                         </div>
@@ -82,7 +82,7 @@
                                 <span class="minbakSubTitle">JegalNyang</span>
                             </div>
                             <div>
-                                <span><img src="../../assets/img/calender.svg" alt=""></span>
+                                <span><img src="../../assets/img/date.svg" alt=""></span>
                                 <span class="minbakSubTitle">8/25 ~ 9/17</span>
                             </div>
                         </div>
@@ -98,7 +98,7 @@
                                 <span class="minbakSubTitle">JegalNyang</span>
                             </div>
                             <div>
-                                <span><img src="../../assets/img/calender.svg" alt=""></span>
+                                <span><img src="../../assets/img/date.svg" alt=""></span>
                                 <span class="minbakSubTitle">8/25 ~ 9/17</span>
                             </div>
                         </div>
