--- a/src/main/resources/components/minbag/cancel/css/style.css
+++ b/src/main/resources/components/minbag/cancel/css/style.css
@@ -1,3 +1,146 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
 
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  overflow: hidden;
+}
 
-/*# sourceMappingURL=style.css.map */
+.mobile_view {
+  display: flex;
+  flex-direction: column;
+  width: 353px;
+  max-height: 852px;
+  text-align: left;
+  align-items: left;
+}
+.slide-container {
+  overflow: hidden;
+}
+.slide {
+  display: flex;
+  transition: transform 0.5s ease;
+  width: 100%;
+  height: 300px;
+}
+
+.slide img {
+  width: 100%;
+  background-size: cover;
+}
+
+.controls {
+  position: relative; /* absolute에서 relative로 변경 */
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: -50px; /* 버튼 위치 조정 */
+}
+
+.slideButton {
+  cursor: pointer;
+  background: none;
+}
+
+.cartegory {
+  display: flex; /* flexbox 사용 */
+  justify-content: left; /* 가운데 정렬 */
+  align-items: center; /* 세로 가운데 정렬 */
+  height: 50px;
+  width: 100%; /* 전체 너비를 사용 */
+}
+.cartegory span {
+  font-family: "Pretendard-Medium";
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 10px;
+  background-color: #ff8a36;
+  color: white;
+  margin: 0 5px; /* 간격 조정 */
+}
+
+.Registrar {
+  width: 100%;
+  text-align: left;
+  border-bottom: 0.5px solid #676767;
+}
+.minBakTitle {
+  font-family: "Pretendard-Bold";
+  font-size: 22px;
+}
+.RegistrarId {
+  font-family: "Pretendard-Medium";
+  font-size: 12px;
+  color: #676767;
+  margin-top: -15px;
+}
+.Information {
+  margin-top: 10px;
+}
+.Information div {
+  display: flex;
+  align-items: center; /* 세로 가운데 정렬 */
+}
+.Information div > span {
+  font-family: "Pretendard-SemiBold";
+  color: #676767;
+  font-size: 15px;
+  align-items: left;
+  margin-left: 5px; /* 이미지와 텍스트 간의 간격 조정 */
+}
+.date_money {
+    margin-top: 10px;
+    justify-content: space-between;
+}
+.RestrationButton {
+    width: 100%;
+    height: 50px;
+    background-color: #676767;
+    color: white;
+    font-family: "Pretendard-SemiBold";
+    font-size: 20px;
+    border: none;
+    border-radius: 10px;
+}
+
+.modal {
+    display: none; /* 기본적으로 숨김 */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    text-align: center;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
