--- a/src/main/resources/components/minbag/application/css/style.css
+++ b/src/main/resources/components/minbag/application/css/style.css
@@ -95,6 +95,7 @@ body {
   margin-left: 5px; /* 이미지와 텍스트 간의 간격 조정 */
 }
 .date_money {
+    margin-top: 10px;
     justify-content: space-between;
 }
 .RestrationButton {
@@ -106,4 +107,40 @@ body {
     font-size: 20px;
     border: none;
     border-radius: 10px;
+}
+
+.modal {
+    display: none; /* 기본적으로 숨김 */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    text-align: center;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
